--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/global.css'
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = 'About Me!';
 
@@ -21,31 +21,16 @@ const fontWeight = 'bold';
 const textCase = 'uppercase';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
-	</head>
-	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+<style define:vars={{skillColor, fontWeight, textCase}}>
 
-		<h1>{pageTitle}</h1>
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
+
+<BaseLayout pageTitle={pageTitle}>
     <h2>... and my new Astro site!</h2>
 
     <p>I am working through Astro's introductory tutorial.  This is the second page on my website, and it's the first one I built myself!</p>
@@ -73,5 +58,4 @@ const textCase = 'uppercase';
       ? <p>My goal is to finish in 3 days.</p>
       : <p>My goal is not 3 days.</p>
     }
-  </body>
-</html>
+</BaseLayout>
