--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from "../components/Greeting.tsx";
 const pageTitle: string = "Home Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
+  <h2>My awesome blog subtitle</h2>
+  <Greeting client:load messages={["Hello", "Hi", "Hey", "Howdy"]} />
 </BaseLayout>
