--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,10 @@ html {
   background-color: #f1f5f9;
   font-family: sans-serif;
 }
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
 
 body {
   margin: 0 auto;
@@ -41,6 +45,9 @@ h1 {
   background-color: #ff9776;
   display: none;
   margin: 0;
+}
+.dark .nav-links {
+  color: #fff;
 }
 
 .nav-links a {
